adjust API design
